--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,12 +1,12 @@
-<%= form_with(url: "/search", local: true) do %>
-  <%= label_tag(:q, "Search for:") %>
-  <%= text_field_tag(:q) %>
-  <%= submit_tag("Search") %>
-<% end %>
-<% if @expedientes %>
-  <% @expedientes.each do |expte|%>
-    <div style="border: 1px solid black">
-      <%= link_to expte[0]+" - "+expte[1], expte[2], target: "_blank" %>
+<div class="d-flex flex-column align-items-center text-center">
+  <%= form_with(url: "/", local: true, class:"p-5 h3") do %>
+    <%= text_field_tag(:q, nil, placeholder: 'Número de expediente', autofocus: true, class: "p-4 text-center") %>
+  <% end %>
+  <% if @expedientes %>
+    <div>
+      <% @response.each do |expte|%>
+        <%=raw expte%>
+      <% end %>
     </div>
   <% end %>
-<% end %>
+</div.>
